--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,133 +28,94 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container col-12 col-md-6 col-xl-3 mb-3">
-      <div class="m-5 row justify-content-left">
-        <div class="col-sm">
-          <div class="card">
-            <h2>12 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>1 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>2 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>3 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>4 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>5 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>6 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>7 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>8 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>9 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>10 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>11 pm</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>12 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>1 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>2 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>3 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>4 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>5 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>6 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>7 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>8 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>9 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>10 am</h2>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card">
-            <h2>11 am</h2>
-          </div>
-        </div>
+
+    <div class="container">
+      <div class="row time-block" id="h-9">
+        <div class="col-md-1">9 am</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
       </div>
+
+      <div class="row time-block" id="h-10">
+        <div class="col-md-1">10 am</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-11">
+        <div class="col-md-1">11 am</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-12">
+        <div class="col-md-1">12 pm</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-13">
+        <div class="col-md-1">1 pm</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-14">
+        <div class="col-md-1">2 am</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-15">
+        <div class="col-md-1">3 pm</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-16">
+        <div class="col-md-1">4 pm</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="h-17">
+        <div class="col-md-1">5 pm</div>
+
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn btn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
       <!-- Timeblocks go here -->
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+    <script src="../Develop/script.js"></script>
   </body>
 </html>
